--- a/app/src/main/res/layout/activity_fourth.xml
+++ b/app/src/main/res/layout/activity_fourth.xml
@@ -28,149 +28,149 @@
         android:id="@+id/textView"
         android:layout_width="156dp"
         android:layout_height="48dp"
-        android:layout_marginStart="31dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="72dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/wins"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="156dp"
         android:layout_height="48dp"
-        android:layout_marginStart="31dp"
+        android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/plays"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="156dp"
         android:layout_height="48dp"
-        android:layout_marginStart="31dp"
+        android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/bugs"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="156dp"
         android:layout_height="48dp"
-        android:layout_marginStart="31dp"
+        android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/automations"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="156dp"
         android:layout_height="48dp"
-        android:layout_marginStart="31dp"
+        android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/illuminates"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView12"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="156dp"
         android:layout_height="48dp"
-        android:layout_marginStart="31dp"
+        android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/fired"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="156dp"
         android:layout_height="48dp"
-        android:layout_marginStart="31dp"
+        android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/hits"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView10"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="156dp"
         android:layout_height="48dp"
-        android:layout_marginStart="31dp"
+        android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/deaths"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView11"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="156dp"
         android:layout_height="48dp"
-        android:layout_marginStart="31dp"
-        android:layout_marginBottom="11dp"
+        android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/revives"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="156dp"
         android:layout_height="48dp"
-        android:layout_marginStart="31dp"
+        android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/friendly_kills"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
 
     <EditText
         android:id="@+id/typeWins"
         android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="72dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -179,17 +179,13 @@
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/typePlays"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/header" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/typePlays"
         android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -198,16 +194,13 @@
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/typeBugs"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/typeWins" />
 
     <EditText
         android:id="@+id/typeBugs"
         android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -216,16 +209,13 @@
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/typeAutomations"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/typePlays" />
 
     <EditText
         android:id="@+id/typeAutomations"
         android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -234,16 +224,13 @@
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/typeIlluminates"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/typeBugs" />
 
     <EditText
         android:id="@+id/typeIlluminates"
         android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -252,16 +239,13 @@
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/typeFriendly"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/typeAutomations" />
 
     <EditText
         android:id="@+id/typeFriendly"
         android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -270,16 +254,13 @@
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/typeFires"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView12"
         app:layout_constraintTop_toBottomOf="@+id/typeIlluminates" />
 
     <EditText
         android:id="@+id/typeFires"
         android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -288,16 +269,13 @@
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/typeHits"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/typeFriendly" />
 
     <EditText
         android:id="@+id/typeHits"
         android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -306,16 +284,13 @@
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/typeDeaths"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/typeFires" />
 
     <EditText
         android:id="@+id/typeDeaths"
         android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -324,16 +299,13 @@
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/typeRevives"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/typeHits" />
 
     <EditText
         android:id="@+id/typeRevives"
         android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="9dp"
         android:background="@color/backgroundGrey"
@@ -345,16 +317,14 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/saveButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/typeDeaths" />
+        app:layout_constraintTop_toBottomOf="@+id/typeDeaths"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/saveButton"
         android:layout_width="184dp"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="177dp"
+        android:layout_marginBottom="124dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/fs_sinclair_medium"
         android:text="@string/Save"
@@ -364,15 +334,14 @@
         app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cancelButton" />
+        app:layout_constraintHorizontal_bias="0.859"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/cancelButton"
         android:layout_width="156dp"
         android:layout_height="50dp"
-        android:layout_marginStart="31dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="177dp"
+        android:layout_marginBottom="124dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/fs_sinclair_medium"
         android:text="@string/cancel"
@@ -381,6 +350,7 @@
         android:textStyle="bold"
         app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/saveButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
